--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       run: flake8 app tests
 
     - name: Run Tests
-      run: pytest -q
+      run: PYTHONPATH=. pytest -q
 
     - name: Build Docker Image
       run: docker build -t fastapi-devops:ci .
